# pycbsdk

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml  python-tests.yml
notebooks/: README.md
pycbsdk/: cbsdk.py
pycbsdk/cbhw/: handler.py  params.py
pycbsdk/cbhw/device/: base.py  nsp.py
pycbsdk/cbhw/io/: base.py  datagram.py  shmem.py
pycbsdk/cbhw/packet/: abstract.py  common.py  factory.py  packets.py  v311.py  v40.py  v41.py
pycbsdk/cbhw/packet/header/: __init__.py  v311.py  v40.py  v41.py
pycbsdk/examples/: group_sample_intervals.py  print_rates.py
pycbsdk/misc/: net.py
scripts/: README.md  raw_sample_intervals.py
src/pycbsdk/: __init__.py  cbsdk.py
src/pycbsdk/cbhw/: config.py  consts.py  handler.py  params.py
src/pycbsdk/cbhw/device/: base.py  nsp.py
src/pycbsdk/cbhw/io/: datagram.py
src/pycbsdk/cbhw/packet/: abstract.py  common.py  packets.py  v311.py  v40.py  v41.py  v42.py
src/pycbsdk/cbhw/packet/header/: v41.py
src/pycbsdk/examples/: comments.py  group_sample_intervals.py  print_rates.py
tests/cbhw/packet/: test_pkt_generic.py  test_pkt_header.py  test_pkt_spike.py  test_pkt_sysinfo.py
