[project]
name = "pycbsdk"
description = "Pure Python interface to Blackrock Neurotech Cerebus devices"
authors = [
  { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "numpy",
    "aenum>=3.1.15",
    "ifaddr>=0.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
]

[project.scripts]
pycbsdk-rates = "pycbsdk.examples.print_rates:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pycbsdk/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pycbsdk"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
    "typer>=0.12.5",
]
