[metadata]
name = pycbsdk
version = attr: pycbsdk.__version__
author = Chadwick Boulay
author_email = chadwick.boulay@gmail.com
description = Pure Python interface to Blackrock Neurotech Cerebus devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CerebusOSS/pycbsdk
project_urls =
    Bug Tracker = https://github.com/CerebusOSS/pycbsdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    aenum
    ifaddr

[options.extras_require]
tests = pytest

[options.packages.find]
exclude = tests

[options.entry_points]  # https://setuptools.pypa.io/en/latest/userguide/entry_point.html
console_scripts =
    pycbsdk_print_rates = pycbsdk.examples.print_rates:main
